--- a/index.html
+++ b/index.html
@@ -42,6 +42,28 @@
         <h1>Bem-vindo ao site da E&E</h1>
         <p>Confira as imagens do imóvel disponível</p>
     </header>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>E&E Real Estate</title>
+</head>
+<body>
+    <h1>Bem-vindo(a) ao E&E Real Estate</h1>
+
+    <h2>Entre em Contato</h2>
+    <ul>
+        <li>Email: <a href="mailto:contato@ee-imoveis.com">contato@ee-imoveis.com</a></li>
+        <li>Telefone: <a href="tel:+551199999999">+55 (11) 99999-9999</a></li>
+        <li>WhatsApp: <a href="https://wa.me/5511999999999" target="_blank">Conversar no WhatsApp</a></li>
+        <li>Instagram: <a href="https://instagram.com/eeimoveis" target="_blank">Instagram</a></li>
+    </ul>
+
+    <h2>Imóveis Disponíveis</h2>
+    <!-- Aqui continuam as imagens e informações dos imóveis -->
+</body>
+</html>
 
     <main>
         <section>
