--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
     <h2>Entre em Contato</h2>
     <ul>
-        <li>Email: <a href="mailto:edna.sampaio@uol.com.br">contato@ee-imoveis.com</a></li>
-        <li>Telefone: <a href="tel:+5511961948000">+55 (11) 99999-9999</a></li>
-        <li>Telefone: <a href="tel:+5511947094356">+55 (11) 99999-9999</a></li>
+        <li>Email: <a href="mailto:edna.sampaio@uol.com.br">eda.sampaio@uol.com.br</a></li>
+        <li>Telefone: <a href="tel:+5511961948000">+55 (11) 96194-8000</a></li>
+        <li>Telefone: <a href="tel:+5511947094356">+55 (11) 94709-4356</a></li>
         <li>WhatsApp: <a href="https://wa.me/551196194800" target="_blank">Conversar no WhatsApp</a></li>
         <li>WhatsApp: <a href="https://wa.me/5511947094356" target="_blank">Conversar no WhatsApp</a></li>
         <li>Instagram: <a href="https://instagram.com/eeimoveis" target="_blank">Instagram</a></li>
