--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     <h2>Entre em Contato</h2>
     <ul>
         <li>Email: <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></li>
-        <li>Telefone: <a href="tel:+5511961948000">+55 (11) 96194-8000</a></li>
-        <li>Telefone: <a href="tel:+5511947094356">+55 (11) 94709-4356</a></li>
+        <li>Telefone: <a href="tel:+5511961948000">Edna +55 (11) 96194-8000</a></li>
+        <li>Telefone: <a href="tel:+5511947094356">Eduardo +55 (11) 94709-4356</a></li>
         <li>WhatsApp: <a href="https://wa.me/5511961948000" target="_blank">55 (11)96194-8000</a></li>
         <li>WhatsApp: <a href="https://wa.me/5511947094356" target="_blank">55 (11)94709-4356</a></li>
-        <li>Instagram: <a href="https://instagram.com/eeimoveis" target="_blank">Instagram</a></li>
+        
     </ul>
 
     <h2>Imóveis Disponíveis</h2>
