--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <h2>Entre em Contato</h2>
     <ul>
         <li>Email: <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></li>
-        <li>Telefone: <a href="tel:+5511961948000">Edna Sampaio +55 (11) 96194-8000</a></li>
-        <li>Telefone: <a href="tel:+5511947094356">Eduardo Sampaio +55 (11) 94709-4356</a></li>
-        <li>WhatsApp: <a href="https://wa.me/5511961948000" target="_blank">55 (11)96194-8000</a></li>
-        <li>WhatsApp: <a href="https://wa.me/5511947094356" target="_blank">55 (11)94709-4356</a></li>
+        <li>Telefone Edna Sampaio: <a href="tel:+5511961948000"> +55 (11) 96194-8000</a></li>
+        <li>Telefone Eduardo Sampaio: <a href="tel:+5511947094356"> +55 (11) 94709-4356</a></li>
+        <li>WhatsApp Edna Sampaio: <a href="https://wa.me/5511961948000" target="_blank">55 (11)96194-8000</a></li>
+        <li>WhatsApp Eduardo Sampaio: <a href="https://wa.me/5511947094356" target="_blank">55 (11)94709-4356</a></li>
         
     </ul>
 
