--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     <title>E&E Real Estate</title>
 </head>
 <body>
-    <h1>Bem-vindo(a) ao E&E Real Estate</h1>
+    <h1>Bem-vindo(a) ao E&E Imóveis</h1>
 
     <h2>Entre em Contato</h2>
     <ul>
         <li>Email: <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></li>
-        <li>Telefone Edna Sampaio: <a href="tel:+5511961948000"> +55 (11) 96194-8000</a></li>
-        <li>Telefone Eduardo Sampaio: <a href="tel:+5511947094356"> +55 (11) 94709-4356</a></li>
+        <li>Telefone Edna Sampaio: <a href="tel:+5511961948000"> 55 (11) 96194-8000</a></li>
+        <li>Telefone Eduardo Sampaio: <a href="tel:+5511947094356"> 55 (11) 94709-4356</a></li>
         <li>WhatsApp Edna Sampaio: <a href="https://wa.me/5511961948000" target="_blank">55 (11)96194-8000</a></li>
         <li>WhatsApp Eduardo Sampaio: <a href="https://wa.me/5511947094356" target="_blank">55 (11)94709-4356</a></li>
         
