--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </ul>
 
     <h2>Imóveis Disponíveis</h2>
-    <!-- Aqui continuam as imagens e informações dos imóveis -->
+    <--Imóvel na localizado na Aclimação, 1 por andar com 3 dormitórios  -->
 </body>
 </html>
 
