--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E&E Real Estate</title>
+    <title>E&E Imóveis</title>
 </head>
 <body>
     <h1>Bem-vindo(a) ao E&E Imóveis</h1>
@@ -55,15 +55,13 @@
     <h2>Entre em Contato</h2>
     <ul>
         <li>Email: <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></li>
-        <li>Telefone Edna Sampaio: <a href="tel:+5511961948000"> 55 (11) 96194-8000</a></li>
-        <li>Telefone Eduardo Sampaio: <a href="tel:+5511947094356"> 55 (11) 94709-4356</a></li>
         <li>WhatsApp Edna Sampaio: <a href="https://wa.me/5511961948000" target="_blank">55 (11)96194-8000</a></li>
         <li>WhatsApp Eduardo Sampaio: <a href="https://wa.me/5511947094356" target="_blank">55 (11)94709-4356</a></li>
         
     </ul>
 
     <h2>Imóveis Disponíveis</h2>
-    <--Imóvel na localizado na Aclimação, 1 por andar com 3 dormitórios  -->
+    Imóvel na localizado na Aclimação, 1 por andar com 3 dormitórios
 </body>
 </html>
 
