--- a/index.html
+++ b/index.html
@@ -1,83 +1,110 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imóveis E&E</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-        main {
-            padding: 20px;
-        }
-        h1 {
-            font-size: 24px;
-        }
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            justify-content: center;
-        }
-        .gallery img {
-            max-width: 300px;
-            border-radius: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-    </style>
-</head>
-<body>
-
-    <header>
-        <h1>Bem-vindo ao site da E&E</h1>
-        <p>Confira as imagens do imóvel disponível</p>
-    </header>
-<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E&E Imóveis</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f9fa;
+            color: #333;
+        }
+        header {
+            background-color: #28a745;
+            padding: 20px;
+            text-align: center;
+            color: white;
+            font-size: 1.8em;
+        }
+        main {
+            max-width: 1100px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+        section {
+            margin-bottom: 40px;
+        }
+        .contact {
+            text-align: center;
+        }
+        .contact a {
+            color: #007bff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .contact a:hover {
+            text-decoration: underline;
+        }
+        .property-listing {
+            margin: 40px 0;
+        }
+        .property-listing h2 {
+            color: #28a745;
+            border-bottom: 2px solid #28a745;
+            padding-bottom: 10px;
+        }
+        .images {
+            display: flex;
+            gap: 20px;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .images img {
+            width: 300px;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #f1f1f1;
+            color: #333;
+            margin-top: 40px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Bem-vindo(a) ao E&E Imóveis</h1>
 
-    <h2>Entre em Contato</h2>
-    <ul>
-        <li>Email: <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></li>
-        <li>WhatsApp Edna Sampaio: <a href="https://wa.me/5511961948000" target="_blank">55 (11)96194-8000</a></li>
-        <li>WhatsApp Eduardo Sampaio: <a href="https://wa.me/5511947094356" target="_blank">55 (11)94709-4356</a></li>
-        
-    </ul>
+<header>
+    Bem-vindo ao site da E&E Imóveis
+</header>
 
-<h2>Imóveis Disponíveis</h2>
-    Imóvel na localizado na Aclimação, 1 por andar com 3 dormitórios
+<main>
+    <section class="contact">
+        <h1>Entre em Contato</h1>
+        <p>Email: <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></p>
+        <p>WhatsApp Edna Sampaio: <a href="https://wa.me/5511961948000" target="_blank">55 (11) 96194-8000</a></p>
+        <p>WhatsApp Eduardo Sampaio: <a href="https://wa.me/5511947094356" target="_blank">55 (11) 94709-4356</a></p>
+    </section>
+
+    <section class="property-listing">
+        <h2>Imóveis Disponíveis</h2>
+        <p>Imóvel localizado na Aclimação, 1 por andar com 3 dormitórios.</p>
+
+        <div class="images">
+            <img src="WhatsApp Image 2024-10-23 at 20.55.16.jpeg" alt="Imagem do Imóvel 1">
+            <img src="WhatsApp Image 2024-10-23 at 20.55.29.jpeg" alt="Imagem do Imóvel 2">
+            <img src="WhatsApp Image 2024-10-23 at 20.55.40.jpeg" alt="Imagem do Imóvel 3">
+            <img src="WhatsApp Image 2024-10-23 at 20.55.50.jpeg" alt="Imagem do Imóvel 4">
+            <img src="WhatsApp Image 2024-10-23 at 20.56.00.jpeg" alt="Imagem do Imóvel 5">
+        </div>
+    </section>
+</main>
+
+<footer>
+    © 2024 E&E Imóveis. Todos os direitos reservados.
+</footer>
+
 </body>
 </html>
-
-    <main>
-        <section>
-            <h2>Imagens do Imóvel</h2>
-            <div class="gallery">
-                <img src="WhatsApp Image 2024-10-23 at 20.55.16.jpeg" alt="Imagem do Imóvel 1">
-                <img src="WhatsApp Image 2024-10-23 at 20.55.29.jpeg" alt="Imagem do Imóvel 2">
-                <img src="WhatsApp Image 2024-10-23 at 20.55.40.jpeg" alt="Imagem do Imóvel 3">
-                <img src="WhatsApp Image 2024-10-23 at 20.55.50.jpeg" alt="Imagem do Imóvel 4">
-                <img src="WhatsApp Image 2024-10-23 at 20.56.00.jpeg" alt="Imagem do Imóvel 5">
-            </div>
-        </section>
-    </main>
-
-</body>
-</html>
-
