--- a/index.html
+++ b/index.html
@@ -28,4 +28,88 @@
             width: 80%;
             margin: auto;
             padding: 20px;
-            background-color:
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .contact {
+            margin: 20px 0;
+        }
+
+        .contact a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+
+        .property-description {
+            margin-top: 20px;
+            line-height: 1.6;
+        }
+
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+
+        .gallery img {
+            width: 30%;
+            border-radius: 5px;
+            transition: transform 0.2s;
+        }
+
+        .gallery img:hover {
+            transform: scale(1.05);
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+            margin-top: 30px;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Bem-vindo ao site da E&E Imóveis</h1>
+    <p>Confira as imagens do imóvel disponível</p>
+</header>
+
+<div class="container">
+    <section class="contact">
+        <h2>Entre em Contato</h2>
+        <p>Email: <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></p>
+        <p>WhatsApp Edna Sampaio: <a href="https://wa.me/5511961948000">55 (11) 96194-8000</a></p>
+        <p>WhatsApp Eduardo Sampaio: <a href="https://wa.me/5511947094356">55 (11) 94709-4356</a></p>
+    </section>
+
+    <section class="property-description">
+        <h2>Imóvel Disponível</h2>
+        <p>Este exclusivo apartamento está localizado no bairro da Aclimação, em um edifício de alto padrão. Situado no 1º andar, o imóvel conta com a vantagem de ser o único por andar, oferecendo total privacidade e tranquilidade.</p>
+        <p>Com 3 dormitórios espaçosos, o imóvel é ideal para famílias que buscam conforto e praticidade. A taxa de condomínio é de R$350, proporcionando excelente custo-benefício para a região.</p>
+        <p>A localização privilegiada oferece fácil acesso a parques, escolas, comércio e serviços, garantindo uma excelente qualidade de vida.</p>
+    </section>
+
+    <section class="gallery">
+        <h2>Imagens do Imóvel</h2>
+        <img src="WhatsApp Image 2024-10-23 at 20.55.16.jpeg" alt="Imagem do imóvel 1">
+        <img src="WhatsApp Image 2024-10-23 at 20.55.29.jpeg" alt="Imagem do imóvel 2">
+        <img src="WhatsApp Image 2024-10-23 at 20.55.40.jpeg" alt="Imagem do imóvel 3">
+        <img src="WhatsApp Image 2024-10-23 at 20.55.50.jpeg" alt="Imagem do imóvel 4">
+        <img src="WhatsApp Image 2024-10-23 at 20.56.00.jpeg" alt="Imagem do imóvel 5">
+    </section>
+</div>
+
+<footer>
+    <p>E&E Imóveis © 2024 - Todos os direitos reservados</p>
+</footer>
+
+</body>
+</html>
