--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <section class="property-description">
         <h2>Imóvel Disponível</h2>
-        <p>Este exclusivo apartamento está localizado no bairro da Aclimação, em um edifício de alto padrão. Situado no 1º andar, o imóvel conta com a vantagem de ser o único por andar, oferecendo total privacidade e tranquilidade.</p>
+        <p>Este exclusivo apartamento está localizado no bairro da Aclimação. Situado no 1º andar, o imóvel conta com a vantagem de ser o único por andar, oferecendo total privacidade e tranquilidade.</p>
         <p>Com 3 dormitórios espaçosos, o imóvel é ideal para famílias que buscam conforto e praticidade. A taxa de condomínio é de R$350, proporcionando excelente custo-benefício para a região.</p>
         <p>A localização privilegiada oferece fácil acesso a parques, escolas, comércio e serviços, garantindo uma excelente qualidade de vida.</p>
     </section>
