--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Confira as imagens e detalhes do imóvel disponível na Aclimação.">
-    <title>E&E Imóveis - Aclimação</title>
+    <meta name="description" content="Confira as imagens e detalhes dos imóveis disponíveis.">
+    <title>E&E Imóveis - Lista de Imóveis</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,8 +42,11 @@
             text-decoration: none;
         }
 
+        .property-section {
+            margin-top: 40px;
+        }
+
         .property-description {
-            margin-top: 20px;
             line-height: 1.6;
         }
 
@@ -79,7 +82,7 @@
 
 <header>
     <h1>Bem-vindo ao site da E&E Imóveis</h1>
-    <p>Confira as imagens do imóvel disponível</p>
+    <p>Confira as imagens dos imóveis disponíveis</p>
 </header>
 
 <div class="container">
@@ -90,20 +93,38 @@
         <p>WhatsApp Eduardo Sampaio: <a href="https://wa.me/5511947094356">55 (11) 94709-4356</a></p>
     </section>
 
-    <section class="property-description">
-        <h2>Imóvel Disponível</h2>
-        <p>Este exclusivo apartamento está localizado no bairro da Aclimação. Situado no 1º andar, o imóvel conta com a vantagem de ser o único por andar, oferecendo total privacidade e tranquilidade.</p>
-        <p>Com 3 dormitórios espaçosos, o imóvel é ideal para famílias que buscam conforto e praticidade. A taxa de condomínio é de R$350, proporcionando excelente custo-benefício para a região.</p>
-        <p>A localização privilegiada oferece fácil acesso a parques, escolas, comércio e serviços, garantindo uma excelente qualidade de vida.</p>
+    <!-- Seção do primeiro imóvel -->
+    <section class="property-section">
+        <h2>Imóvel 1: Aclimação</h2>
+        <div class="property-description">
+            <p>Este exclusivo apartamento está localizado no bairro da Aclimação, em um edifício de alto padrão. Situado no 1º andar, o imóvel conta com a vantagem de ser o único por andar, oferecendo total privacidade e tranquilidade.</p>
+            <p>Com 3 dormitórios espaçosos, o imóvel é ideal para famílias que buscam conforto e praticidade. A taxa de condomínio é de R$350, proporcionando excelente custo-benefício para a região.</p>
+            <p>A localização privilegiada oferece fácil acesso a parques, escolas, comércio e serviços, garantindo uma excelente qualidade de vida.</p>
+        </div>
+        <section class="gallery">
+            <h3>Imagens do Imóvel</h3>
+            <img src="WhatsApp Image 2024-10-23 at 20.55.16.jpeg" alt="Imagem do imóvel 1">
+            <img src="WhatsApp Image 2024-10-23 at 20.55.29.jpeg" alt="Imagem do imóvel 2">
+            <img src="WhatsApp Image 2024-10-23 at 20.55.40.jpeg" alt="Imagem do imóvel 3">
+            <img src="WhatsApp Image 2024-10-23 at 20.55.50.jpeg" alt="Imagem do imóvel 4">
+            <img src="WhatsApp Image 2024-10-23 at 20.56.00.jpeg" alt="Imagem do imóvel 5">
+        </section>
     </section>
 
-    <section class="gallery">
-        <h2>Imagens do Imóvel</h2>
-        <img src="WhatsApp Image 2024-10-23 at 20.55.16.jpeg" alt="Imagem do imóvel 1">
-        <img src="WhatsApp Image 2024-10-23 at 20.55.29.jpeg" alt="Imagem do imóvel 2">
-        <img src="WhatsApp Image 2024-10-23 at 20.55.40.jpeg" alt="Imagem do imóvel 3">
-        <img src="WhatsApp Image 2024-10-23 at 20.55.50.jpeg" alt="Imagem do imóvel 4">
-        <img src="WhatsApp Image 2024-10-23 at 20.56.00.jpeg" alt="Imagem do imóvel 5">
+    <!-- Seção para o segundo imóvel (pode adicionar mais conforme necessário) -->
+    <section class="property-section">
+        <h2>Imóvel 2: Vila Mariana</h2>
+        <div class="property-description">
+            <p>Este apartamento moderno está localizado no coração da Vila Mariana, uma das regiões mais desejadas de São Paulo. Com 2 dormitórios, o imóvel é ideal para jovens casais ou profissionais que buscam praticidade e conforto.</p>
+            <p>A taxa de condomínio é de R$500, e o prédio oferece diversas comodidades como piscina, academia e salão de festas.</p>
+            <p>A proximidade ao metrô e ao Parque do Ibirapuera é um grande diferencial deste imóvel.</p>
+        </div>
+        <section class="gallery">
+            <h3>Imagens do Imóvel</h3>
+            <img src="imovel2-1.jpg" alt="Imagem do imóvel 2-1">
+            <img src="imovel2-2.jpg" alt="Imagem do imóvel 2-2">
+            <img src="imovel2-3.jpg" alt="Imagem do imóvel 2-3">
+        </section>
     </section>
 </div>
 
