--- a/index.html
+++ b/index.html
@@ -119,6 +119,29 @@
             width: 100%;
             margin-top: 30px;
         }
+
+        /* Estilos Responsivos para Smartphones */
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+            }
+
+            .gallery img {
+                width: 100%; /* Cada imagem ocupará 100% da largura em dispositivos móveis */
+            }
+
+            h1, h2 {
+                font-size: 1.5rem; /* Tamanhos de texto menores em telas pequenas */
+            }
+
+            p {
+                font-size: 1rem;
+            }
+
+            .property-description {
+                font-size: 1rem;
+            }
+        }
     </style>
 </head>
 <body>
@@ -140,7 +163,7 @@
     <section class="property-section">
         <h2>Imóvel 1: Aclimação</h2>
         <div class="property-description">
-            <p>Este exclusivo apartamento está localizado no bairro da Aclimação. Situado no 1º andar, o imóvel conta com a vantagem de ser o único por andar, oferecendo total privacidade e tranquilidade.</p>
+            <p>Este exclusivo apartamento está localizado no bairro da Aclimação, em um edifício de alto padrão. Situado no 1º andar, o imóvel conta com a vantagem de ser o único por andar, oferecendo total privacidade e tranquilidade.</p>
             <p>Com 3 dormitórios espaçosos, o imóvel é ideal para famílias que buscam conforto e praticidade. A taxa de condomínio é de R$350, proporcionando excelente custo-benefício para a região.</p>
             <p>A localização privilegiada oferece fácil acesso a parques, escolas, comércio e serviços, garantindo uma excelente qualidade de vida.</p>
         </div>
