--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
     <section class="contact">
         <h2>Entre em Contato</h2>
         <p>Email: <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></p>
-        <p>WhatsApp Edna Sampaio: <a href="https://wa.me/5511961948000">55 (11) 96194-8000</a></p>
-        <p>WhatsApp Eduardo Sampaio: <a href="https://wa.me/5511947094356">55 (11) 94709-4356</a></p>
+        <p>WhatsApp Edna Sampaio: <a href="https://wa.me/5511961948000">(11) 96194-8000</a></p>
+        <p>WhatsApp Eduardo Sampaio: <a href="https://wa.me/5511947094356">(11) 94709-4356</a></p>
     </section>
 
     <!-- Seção do primeiro imóvel -->
