--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <div class="contact-info">
             <h2>Entre em Contato</h2>
             <p><strong>Creci:</strong> 56080</p>
+            <p><strong>Email:</strong> <a href="eduatdol21sampaio@gmail.com">edna.sampaio@uol.com.br</a></p>
             <p><strong>Email:</strong> <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></p>
             <p><strong>WhatsApp Eduardo Sampaio:</strong> <a href="https://wa.me/5511947094356" target="_blank">55 (11) 94709-4356</a></p>
             <p><strong>WhatsApp Edna Sampaio:</strong> <a href="https://wa.me/5511961948000" target="_blank">55 (11) 96194-8000</a></p>
