--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
         <div class="contact-info">
             <h2>Entre em Contato</h2>
             <p><strong>Creci:</strong> 56080</p>
-            <p><strong>Email:</strong> <a href="eduatdol21sampaio@gmail.com">edna.sampaio@uol.com.br</a></p>
+            <p><strong>Email:</strong> <a href="eduardol21sampaio@gmail.com">eduardol21sampaio@gmail.com</a></p>
             <p><strong>Email:</strong> <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></p>
-            <p><strong>WhatsApp Eduardo Sampaio:</strong> <a href="https://wa.me/5511947094356" target="_blank">55 (11) 94709-4356</a></p>
-            <p><strong>WhatsApp Edna Sampaio:</strong> <a href="https://wa.me/5511961948000" target="_blank">55 (11) 96194-8000</a></p>
+            <p><strong>WhatsApp Eduardo Sampaio:</strong> <a href="https://wa.me/(11)947094356" target="_blank">55 (11) 94709-4356</a></p>
+            <p><strong>WhatsApp Edna Sampaio:</strong> <a href="https://wa.me/(11)961948000" target="_blank">55 (11) 96194-8000</a></p>
         </div>
         
         <!-- Detalhes do Imóvel -->
@@ -106,7 +106,7 @@
             <h2>Imóveis Disponíveis</h2>
             <h3>Imóvel localizado na Aclimação</h3>
             <p>1º andar, 1 por andar, R$350 de condomínio.</p>
-            <p><strong>Valor do Imóvel:</strong> R$ 550.000,00</p>
+            <p><strong>Valor do Imóvel:</strong> R$ 750.000,00</p>
             <p>Conforto, privacidade e excelente localização em um dos bairros mais procurados de São Paulo.</p>
         </div>
 
