--- a/index.html
+++ b/index.html
@@ -87,10 +87,13 @@
 
         <h3>Imagens do Imóvel</h3>
         <div class="images-grid">
-            <img src="WhatsApp%20Image%202024-10-23%20at%2020.55.16.jpg" alt="Imagem do Imóvel 1">
-            <img src="WhatsApp%20Image%202024-10-23%20at%2020.55.29.jpg" alt="Imagem do Imóvel 2">
-            <img src="WhatsApp%20Image%202024-10-23%20at%2020.55.40.jpg" alt="Imagem do Imóvel 3">
-            <img src="WhatsApp%20Image%202024-10-23%20at%2020.55.50.jpg" alt="Imagem do Imóvel 4">
+           <div class="images-grid">
+    <img src="https://github.com/edna-eduardo/E-E/raw/main/WhatsApp%20Image%202024-10-23%20at%2020.55.16.jpg" alt="Imagem do Imóvel 1">
+    <img src="https://github.com/edna-eduardo/E-E/raw/main/WhatsApp%20Image%202024-10-23%20at%2020.55.29.jpg" alt="Imagem do Imóvel 2">
+    <img src="https://github.com/edna-eduardo/E-E/raw/main/WhatsApp%20Image%202024-10-23%20at%2020.55.40.jpg" alt="Imagem do Imóvel 3">
+    <img src="https://github.com/edna-eduardo/E-E/raw/main/WhatsApp%20Image%202024-10-23%20at%2020.55.50.jpg" alt="Imagem do Imóvel 4">
+</div>
+
         </div>
     </section>
 </div>
