--- a/index.html
+++ b/index.html
@@ -3,59 +3,144 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E&E Imóveis</title>
+    <meta name="description" content="Confira as imagens e detalhes dos imóveis disponíveis.">
+    <title>E&E Imóveis - Lista de Imóveis</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
+            background-color: #f4f4f9;
         }
+
         header {
             background-color: #4CAF50;
             color: white;
             padding: 15px;
             text-align: center;
         }
+
+        h1, h2 {
+            color: #333;
+        }
+
         .container {
-            width: 90%;
-            max-width: 800px;
-            margin: 20px auto;
-        }
-        .card {
-            background-color: white;
+            width: 80%;
+            margin: auto;
             padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .contact {
             margin: 20px 0;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
-        .card h2 {
-            margin-top: 0;
-        }
-        .images-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-            gap: 10px;
-        }
-        .images-grid img {
-            width: 100%;
-            height: auto;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: transform 0.3s;
-        }
-        .images-grid img:hover {
-            transform: scale(1.05);
-        }
-        .contact-info {
-            margin-top: 10px;
-            font-size: 0.9em;
-            color: #555;
-        }
-        .contact-info a {
+
+        .contact a {
             color: #4CAF50;
             text-decoration: none;
+        }
+
+        .property-section {
+            margin-top: 40px;
+        }
+
+        .property-description {
+            line-height: 1.6;
+        }
+
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+
+        .gallery img {
+            width: 30%;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+
+        .gallery img:hover {
+            transform: scale(1.05);
+        }
+
+        /* Modal Style */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            padding-top: 60px;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.9);
+        }
+
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px;
+        }
+
+        .modal-content:hover {
+            transform: scale(1.05);
+        }
+
+        .close {
+            position: absolute;
+            top: 30px;
+            right: 35px;
+            color: white;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #bbb;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+            margin-top: 30px;
+        }
+
+        /* Estilos Responsivos para Smartphones */
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+            }
+
+            .gallery img {
+                width: 100%; /* Cada imagem ocupará 100% da largura em dispositivos móveis */
+            }
+
+            h1, h2 {
+                font-size: 1.5rem; /* Tamanhos de texto menores em telas pequenas */
+            }
+
+            p {
+                font-size: 1rem;
+            }
+
+            .property-description {
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
@@ -63,40 +148,76 @@
 
 <header>
     <h1>Bem-vindo ao site da E&E Imóveis</h1>
-    <p>Confira as imagens do imóvel disponível</p>
+    <p>Confira as imagens dos imóveis disponíveis</p>
 </header>
 
 <div class="container">
-    <section class="card">
+    <section class="contact">
         <h2>Entre em Contato</h2>
-        <p><strong>Creci:</strong> 56080</p>
-        <div class="contact-info">
-            <p>Email: <a href="mailto:eduardol21sampaio@gmail.com">eduardol21sampaio@gmail.com</a></p>
-            <p>Email: <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></p>
-            <p>WhatsApp Eduardo Sampaio: <a href="https://wa.me/5511947094356" target="_blank">55 (11) 94709-4356</a></p>
-            <p>WhatsApp Edna Sampaio: <a href="https://wa.me/5511961948000" target="_blank">55 (11) 96194-8000</a></p>
-        </div>
+        <p>Email: <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></p>
+        <p>WhatsApp Edna Sampaio: <a href="https://wa.me/5511961948000">55 (11) 96194-8000</a></p>
+        <p>WhatsApp Eduardo Sampaio: <a href="https://wa.me/5511947094356">55 (11) 94709-4356</a></p>
     </section>
 
-    <section class="card">
-        <h2>Imóveis Disponíveis</h2>
-        <p><strong>Imóvel localizado na Aclimação</strong><br>
-           1º andar, 1 por andar, R$350 de condomínio.<br>
-           <strong>Valor do Imóvel:</strong> R$ 550.000,00</p>
-        <p>Conforto, privacidade e excelente localização em um dos bairros mais procurados de São Paulo.</p>
-
-        <h3>Imagens do Imóvel</h3>
-        <div class="images-grid">
-           <div class="images-grid">
-    <img src="https://github.com/edna-eduardo/E-E/raw/main/WhatsApp%20Image%202024-10-23%20at%2020.55.16.jpg" alt="Imagem do Imóvel 1">
-    <img src="https://github.com/edna-eduardo/E-E/raw/main/WhatsApp%20Image%202024-10-23%20at%2020.55.29.jpg" alt="Imagem do Imóvel 2">
-    <img src="https://github.com/edna-eduardo/E-E/raw/main/WhatsApp%20Image%202024-10-23%20at%2020.55.40.jpg" alt="Imagem do Imóvel 3">
-    <img src="https://github.com/edna-eduardo/E-E/raw/main/WhatsApp%20Image%202024-10-23%20at%2020.55.50.jpg" alt="Imagem do Imóvel 4">
-</div>
-
+    <!-- Seção do primeiro imóvel -->
+    <section class="property-section">
+        <h2>Imóvel 1: Aclimação</h2>
+        <div class="property-description">
+            <p>Este exclusivo apartamento está localizado no bairro da Aclimação, em um edifício de alto padrão. Situado no 1º andar, o imóvel conta com a vantagem de ser o único por andar, oferecendo total privacidade e tranquilidade.</p>
+            <p>Com 3 dormitórios espaçosos, o imóvel é ideal para famílias que buscam conforto e praticidade. A taxa de condomínio é de R$350, proporcionando excelente custo-benefício para a região.</p>
+            <p>A localização privilegiada oferece fácil acesso a parques, escolas, comércio e serviços, garantindo uma excelente qualidade de vida.</p>
         </div>
+        <section class="gallery">
+            <h3>Imagens do Imóvel</h3>
+            <img src="WhatsApp Image 2024-10-23 at 20.55.16.jpeg" alt="Imagem do imóvel 1" class="gallery-img">
+            <img src="WhatsApp Image 2024-10-23 at 20.55.29.jpeg" alt="Imagem do imóvel 2" class="gallery-img">
+            <img src="WhatsApp Image 2024-10-23 at 20.55.40.jpeg" alt="Imagem do imóvel 3" class="gallery-img">
+            <img src="WhatsApp Image 2024-10-23 at 20.55.50.jpeg" alt="Imagem do imóvel 4" class="gallery-img">
+            <img src="WhatsApp Image 2024-10-23 at 20.56.00.jpeg" alt="Imagem do imóvel 5" class="gallery-img">
+        </section>
     </section>
+
+    <!-- Modal for Image Zoom -->
+    <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="imgZoom">
+    </div>
 </div>
+
+<footer>
+    <p>E&E Imóveis © 2024 - Todos os direitos reservados</p>
+</footer>
+
+<script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the image and insert it inside the modal
+    var modalImg = document.getElementById("imgZoom");
+
+    var images = document.querySelectorAll(".gallery-img");
+    images.forEach(function (img) {
+        img.onclick = function () {
+            modal.style.display = "block";
+            modalImg.src = this.src;
+        };
+    });
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function () {
+        modal.style.display = "none";
+    };
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    };
+</script>
 
 </body>
 </html>
