--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Confira as imagens e detalhes dos imóveis disponíveis.">
+    <meta name="description" content="Creci=56080.">
     <title>E&E Imóveis - Lista de Imóveis</title>
     <style>
         body {
@@ -154,6 +155,7 @@
 <div class="container">
     <section class="contact">
         <h2>Entre em Contato</h2>
+        <p>Email: <a href="mailto:eduardoleduatdol21sampaio@gmail.com">eduardol21sampaio@gmail.com</a></p>
         <p>Email: <a href="mailto:edna.sampaio@uol.com.br">edna.sampaio@uol.com.br</a></p>
         <p>WhatsApp Edna Sampaio: <a href="https://wa.me/5511961948000">55 (11) 96194-8000</a></p>
         <p>WhatsApp Eduardo Sampaio: <a href="https://wa.me/5511947094356">55 (11) 94709-4356</a></p>
@@ -163,7 +165,7 @@
     <section class="property-section">
         <h2>Imóvel 1: Aclimação</h2>
         <div class="property-description">
-            <p>Este exclusivo apartamento está localizado no bairro da Aclimação, em um edifício de alto padrão. Situado no 1º andar, o imóvel conta com a vantagem de ser o único por andar, oferecendo total privacidade e tranquilidade.</p>
+            <p>Este exclusivo apartamento está localizado no bairro da Aclimação. Situado no 1º andar, o imóvel conta com a vantagem de ser o único por andar, oferecendo total privacidade e tranquilidade.</p>
             <p>Com 3 dormitórios espaçosos, o imóvel é ideal para famílias que buscam conforto e praticidade. A taxa de condomínio é de R$350, proporcionando excelente custo-benefício para a região.</p>
             <p>A localização privilegiada oferece fácil acesso a parques, escolas, comércio e serviços, garantindo uma excelente qualidade de vida.</p>
         </div>
