--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
     <section class="property-section">
         <h2>Imóvel 1: Aclimação</h2>
         <div class="property-description">
-            <p>Este exclusivo apartamento está localizado no bairro da Aclimação. Situado no 1º andar, o imóvel conta com a vantagem de ser o único por andar, oferecendo total privacidade e tranquilidade.</p>
-            <p>Com 3 dormitórios espaçosos, o imóvel é ideal para famílias que buscam conforto e praticidade. A taxa de condomínio é de R$350, proporcionando excelente custo-benefício para a região.</p>
+            <p>Este  apartamento está localizado próximo da padaria Primicia. Situado no 1º andar com 89 m², o imóvel conta com a vantagem de ser o único por andar, oferecendo total privacidade e tranquilidade.</p>
+            <p>Com 3 dormitórios espaçosos,elevador é um imóvel ideal para famílias que buscam conforto e praticidade. Condominio baixo proporcionando excelente custo-benefício para a região.</p>
             <p>A localização privilegiada oferece fácil acesso a parques, escolas, comércio e serviços, garantindo uma excelente qualidade de vida.</p>
         </div>
         <section class="gallery">
