--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Confira as imagens e detalhes dos imóveis disponíveis.">
-    <meta name="description" content="Creci=56080.">
     <title>E&E Imóveis - Lista de Imóveis</title>
+    <title>Creci = 56080</title>
     <style>
         body {
             font-family: Arial, sans-serif;
