--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Confira as imagens e detalhes dos imóveis disponíveis.">
     <title>E&E Imóveis - Lista de Imóveis</title>
-    <title>Creci = 56080</title>
+    <p>Creci = 56080<p>
     <style>
         body {
             font-family: Arial, sans-serif;
