--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Confira as imagens e detalhes dos imóveis disponíveis.">
+    <meta name="description" content="Confira as imagens e detalhes dos imóveis disponíveis."> <p>" <meta name="description" content=">Creci = 56080"<p>
     <title>E&E Imóveis - Lista de Imóveis</title>
     <p>Creci = 56080<p>
     <style>
