--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Confira as imagens e detalhes dos imóveis disponíveis.  <br>" <meta name="description" content=">Creci = 56080"<p> 
+    <meta name="description" content="Confira as imagens e detalhes dos imóveis disponíveis.">
     <title>E&E Imóveis - Lista de Imóveis</title>
-    <p>Creci = 56080<p>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -149,7 +148,8 @@
 
 <header>
     <h1>Bem-vindo ao site da E&E Imóveis</h1>
-    <p>Confira as imagens dos imóveis disponíveis</p>
+    <p>Confira as imagens dos imóveis disponíveis</p><br>
+    Creci=56080
 </header>
 
 <div class="container">
