--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 
 <header>
     <h1>Bem-vindo ao site da E&E Imóveis</h1>
-    <p>Confira as imagens dos imóveis disponíveis</p><br>
-    Creci=56080
+    <p>Confira as imagens dos imóveis disponíveis Creci=56080</p>
+    
 </header>
 
 <div class="container">
