--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 <header>
     <h1>Bem-vindo ao site da E&E Imóveis</h1>
-    <p>Confira as imagens dos imóveis disponíveis <br><br> Creci=56080</p>
+    <p><br><br> Creci=56080<br>Confira as imagens dos imóveis disponíveis </p>
     
 </header>
 
